# cms_study

./: .env_example  .gitignore  .lefthook.yml  .sqlfluff  MODEL_PERFORMANCE.txt  PRESENTATION.txt  README.md  cheatsheet.md  missing_zipcodes_lat_long.md  prediction_ipfqr_quality_measures_facility.sql  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  temp.md
.circleci/: config.yml
etl/: complications_and_deaths.sql  fy_hospital_readmissions_reduction_program_hospital.sql  hcahps_hospital.sql  hvbp_clinical_outcomes.sql  hvbp_safety.sql  hvbp_tps.sql  ipfqr_quality_measures_facility.sql  pch_hcahps_hospital.sql  zip_lat_long.sql
etl/augmented/: facility_zip_code.sql  msa_centroid.sql  msa_dim.sql  msa_statistics.sql  state_region.sql  zip_demographics.sql  zip_lat_long.sql
etl/prediction/: prediction_hvbp_clinical_outcomes.sql  prediction_hvbp_tps.sql  prediction_ipfqr_quality_measures_facility.sql
etl/recommendation/: recommendation_hospital.sql
etl/source/: complications_and_deaths.sql  fy_hac_reduction_program_hospital.sql  fy_hospital_readmissions_reduction_program_hospital.sql  hcahps_hospital.sql  hvbp_clinical_outcomes.sql  (+10 more)
scripts/: _dev_filter_.sh  environment.sh  etl_execute.sh  initialize_db.sh  launch_api.sh  model_performance.sh  requests.sh  terminate_api.sh  visualization_histograms.sh
src/: etl_main.py  initialize_environment.py  model_general_main.py  model_main.py  model_medicare_main.py  model_psychiatric_main.py  recommendation_main.py  tables.py  transform_main.py  vis_main.py
tests/: test_api.py  test_zip_data_bridge.py
(+33 files in other folders)
