[template]
name = cms_study
version = 0.0.1
author = cyan
author_email = ravenNodeEcho@gmail.com
description = modeling exploration for health
long_description = file: README.md
long_description_content_type=textmarkdown
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src
